# de-framework

./: .gitignore  Makefile  pipeline.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
code_download/: __init__.py  service.py
docs/: design.md
framework/: __init__.py  bootstrap.py  dag_executor.py  metadata_collector.py  models.py  npu_invoker.py  progress_reporter.py  stage_runner.py
npu_service/: __init__.py  server.py
pipelines/: __init__.py
pipelines/data_clean/: __init__.py  pipeline.yaml
pipelines/data_clean/stages/: clean.py
pipelines/llm_distill/: __init__.py  pipeline.yaml
pipelines/llm_distill/stages/: data_load.py  inference.py  postprocess.py
release/llm-distill/v2.3.1/: manifest.json
tests/: test_dag_executor.py  test_npu_invoker.py  test_npu_service.py  test_pipeline_config.py  test_stage_runner.py
